# Polaris

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  原型.html
backend/: pyproject.toml
backend/alembic/versions/: 183e8de0e85f_user_username_unique.py  54fab61b5e2c_initial_schema.py  5b1f3a9c72e6_manuscript_pinned.py  7a2c9e4f16b3_idea_exp_trash_and_tz.py  a1b2c3d4e5f6_ssh_credential_proxy.py  a5b6c7d8e9f0_manuscript_templates_and_binary_files.py  a9b0c1d2e3f4_experiment_lab_m4.py  b2c3d4e5f6a7_idea_deep_v2.py  c1d2e3f4a5b6_voyage_loop_v1.py  c7d8e9f0a1b2_highlight_style.py  (+10 more)
backend/app/: main.py
backend/tests/: conftest.py  fake_ssh.py  test_admin_llm.py  test_auth.py  test_citations_export.py  test_concepts_relink.py  test_crdt_rooms.py  test_experiment_conditions.py  test_experiment_env.py  test_experiment_iterate.py  test_experiments.py  test_gates.py  test_health.py  test_highlights.py  test_idea_forge.py  test_idea_proposal.py  test_idea_review.py  test_latex_compile.py  test_literature.py  test_llm_router.py  test_manuscript_collaborators.py  test_manuscript_compile_settings.py  test_manuscript_export.py  test_manuscript_files.py  test_manuscript_templates.py  test_manuscripts.py  test_mcp_server.py  test_migrations.py  test_paper_figure_tools.py  test_paper_figures.py  test_paper_manual_add.py  test_paper_reading.py  test_paper_tags_meta.py  test_projects.py  test_runner.py  test_search.py  test_skill_market.py  test_skills_api.py  test_skills_workflow.py  test_ssh_credentials.py  (+9 more)
backend/worker/: settings.py  tasks.py
(+712 files in other folders)
