[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-backend"
version = "0.1.0"
description = "Polaris 自动 AI 科研平台 — backend (FastAPI + ARQ worker)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "fastapi-users[sqlalchemy]>=14.0",
    "arq>=0.26",
    "redis>=5",
    "pydantic>=2.11",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "asyncssh>=2.18",
    "cryptography>=43",
    "python-multipart>=0.0.12",
    "pgvector>=0.5",
    "pymupdf>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "fakeredis>=2.26",
    "respx>=0.22",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*", "worker*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 依赖注入惯用法
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.per-file-ignores]
# alembic autogenerate 产物，不为格式手改
"alembic/versions/*" = ["E501", "W291"]

[tool.ruff.lint.isort]
known-first-party = ["app", "worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
